syntax = "proto3";
import "identity.proto";
package idp2p.pb;

enum IdGossipMessageType{
    GET = 0;
    POST = 1;
    MESSAGE = 2;
}

message IdGossipMessageWithTopic {
    string topic = 1; 
    IdGossipMessage gossip_message = 2; 
}

message IdGossipMessage {
    oneof payload {
        Microledger post = 2; // Microledger of updated identity
        IdGossipMessageCipher message = 3;
    }   
}

message IdGossipMessageRaw { 
    bytes from = 1; // Message sender
    bytes signer_kid = 2; // POP kid
    bytes proof = 3; // Proof of possesion
    bytes to = 4; // Message receiver
    int64 created_at = 5; // UTC Timestamp
    bytes body = 6; // Bytes of IdGossipMessageBodyType
    optional bytes reply_to = 7;
}

// id2id message
message IdGossipMessageCipher{
    bytes agreement_kid = 1; // Receipent agreement key id to decrypt message
    bytes agreement_data = 2; // Ephemeral public key(x25519) or ciphertext(kyber)
    int64 encryption_method = 3; // AESGCM(256)
    bytes encryption_iv = 4; // 12 or 24 bytes initial vector
    bytes cipherbody = 5; // Encrypted message body with codec 
}

message IdGossipMessageBodyType{
    oneof m_type{
        string text = 1;
        // Handshaking messages
    }
}

message PairIdentity{
    bytes authentication_key = 1;
    bytes agreement_key = 2;
}